# BoligRating

./: .gitignore  Makefile  README.md  coverage.xml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/boligratings/: __init__.py  apartments.csv  bolig_scraping.py
src/boligratings/data/: apartment_links.json  apartmentdetails.csv  apartmentdetails.json
tests/: test.py
